tree-sitter-pandoc-markdown-inline/test/corpus/foundation.txt
================================================================================
Plain text
================================================================================
hello world

--------------------------------------------------------------------------------

(inline
  (text))

================================================================================
Emphasis
================================================================================
*italic*

--------------------------------------------------------------------------------

(inline
  (emphasis
    (text)))

================================================================================
Strong emphasis
================================================================================
**bold**

--------------------------------------------------------------------------------

(inline
  (strong_emphasis
    (text)))

================================================================================
Code span
================================================================================
`code`

--------------------------------------------------------------------------------

(inline
  (code_span
    (code_span_content)))

================================================================================
Reference link
================================================================================
[text][ref]

--------------------------------------------------------------------------------

(inline
  (link
    (link_text
      (text))
    (link_label
      (text))))

================================================================================
Link
================================================================================
[link](dest)

--------------------------------------------------------------------------------

(inline
  (link
    (link_text
      (text))
    (link_destination)))

================================================================================
Image
================================================================================
![alt](pic.png)

--------------------------------------------------------------------------------

(inline
  (image
    (link_text
      (text))
    (link_destination)))

================================================================================
Reference image
================================================================================
![alt][pic]

--------------------------------------------------------------------------------

(inline
  (image
    (link_text
      (text))
    (link_label
      (text))))

================================================================================
Autolink
================================================================================
<https://example.com>

--------------------------------------------------------------------------------

(inline
  (autolink))

================================================================================
Autolink email
================================================================================
<user@example.com>

--------------------------------------------------------------------------------

(inline
  (autolink))
